Ajout d'un script

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <title>La Cagette</title>
 <link rel="stylesheet" href="style.css">
 
-
 <!-- BODY -->
 <img src=img/banner.png title="Logo Cagette">
 
@@ -16,6 +15,12 @@
 </ul>
 
 <a href=http://lacagette-coop.fr>Le site</a>
+
+<script>
+    hello = (name) => 
+        document.write('Bonjour ' + name)
+
+</script>
 
 
 
