Mise à jour de l'index et ajout du script JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <title>La Cagette</title>
-<link rel="stylesheet" href="style.css">
+<link rel=stylesheet href=style.css>
+<script src=script.js></script>
 
 <!-- BODY -->
 <img src=img/banner.png title="Logo Cagette">
@@ -8,19 +9,8 @@
 
 <p>La Cagette est un <strong>supermarché</strong> coopératif</p>
 <hr>
-<ul>To do :
-    <li>Plan d'amménagement </li>
-    <li>Cartes magnétiques</li>
-    <li>Dossier ESSOR</li>
-</ul>
 
 <a href=http://lacagette-coop.fr>Le site</a>
-
-<script>
-    hello = (name) => 
-        document.write('Bonjour ' + name)
-
-</script>
 
 
 
