Nous  avons rajouté UTF 8 (planche de carachtères

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <title>La Cagette</title>
 <link rel=stylesheet href=style.css>
 <script src=script.js></script>
+<author> Elie </author>
+<meta charset=UTF-8>
 
 <!-- BODY -->
 <img src=img/banner.png title="Logo Cagette">
@@ -10,11 +12,13 @@
 <p>La Cagette est un <strong>supermarché</strong> coopératif</p>
 <hr>
 
+<p data-gh="la-cagette/documentation/arbrifeste.md"></p>
+
 <a href=http://lacagette-coop.fr>Le site</a>
 
-
-
-
+<ul>
+    <li>pomme</li>
+</ul>
 
 
 
