afficher dynamiquement le nombre de coopérateurs

--- a/board.html
+++ b/board.html
@@ -5,8 +5,7 @@
 
 <h1>Tableau de bord</h1>
 
-<p>Nombre de coopérateurs : <span> 12 </span> </p>
-
+<p>Nombre de coopérateurs : <span id=coop-number>0</span></p>
 
 
 
